@@ -1,5 +1,6 @@
 package com.derk.easyinventorycrafter;
 
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.Map;
 
@@ -8,8 +9,8 @@ public final class NearbyInventoryAccounting {
     private NearbyInventoryAccounting() {
     }
 
-    public static <K> Map<K, Integer> totalCounts(Iterable<? extends Iterable<Counted<K>>> inventories) {
-        Map<K, Integer> totals = new LinkedHashMap<>();
+    public static <K> Map<K, Long> totalCounts(Iterable<? extends Iterable<Counted<K>>> inventories) {
+        Map<K, Long> totals = new LinkedHashMap<>();
         for (Iterable<Counted<K>> inventory : inventories) {
             for (Counted<K> entry : inventory) {
                 if (entry.count() > 0) {
@@ -17,15 +18,20 @@ public final class NearbyInventoryAccounting {
                 }
             }
         }
-        return Map.copyOf(totals);
+        // Map.copyOf deliberately does not preserve encounter order. Source
+        // order is the deterministic tie-breaker for otherwise identical UI
+        // labels, so retain the stable inventory/slot traversal order.
+        return Collections.unmodifiableMap(new LinkedHashMap<>(totals));
     }
 
-    private static int saturatedAdd(int left, int right) {
-        long sum = (long) left + right;
-        return sum >= Integer.MAX_VALUE ? Integer.MAX_VALUE : (int) sum;
+    private static long saturatedAdd(long left, long right) {
+        if (right > 0 && left > Long.MAX_VALUE - right) {
+            return Long.MAX_VALUE;
+        }
+        return left + right;
     }
 
-    public record Counted<K>(K key, int count) {
+    public record Counted<K>(K key, long count) {
         public Counted {
             if (key == null) {
                 throw new IllegalArgumentException("key cannot be null");
